src/test/ui/error-codes/E0067.stderr
error[E0368]: binary assignment operation `+=` cannot be applied to type `std::collections::LinkedList<_>`
  --> $DIR/E0067.rs:4:5
   |
LL |     LinkedList::new() += 1;
   |     -----------------^^^^^
   |     |
   |     cannot use `+=` on type `std::collections::LinkedList<_>`
   |
   = note: an implementation of `std::ops::AddAssign` might be missing for `std::collections::LinkedList<_>`

error[E0067]: invalid left-hand side expression
  --> $DIR/E0067.rs:4:5
   |
LL |     LinkedList::new() += 1;
   |     ^^^^^^^^^^^^^^^^^ invalid expression for left-hand side

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0067, E0368.
For more information about an error, try `rustc --explain E0067`.
